--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "dev": "node index.js",
-        "test": "jest"
+        "test": "jest",
+        "seed": "npx sequelize db:seed:all"
     },
     "keywords": [],
     "author": "",
