APIエンドポイント作成、カテゴリ＆商品詳細ページにデータを出力・整形

--- a/api/config/config.json
+++ b/api/config/config.json
@@ -4,7 +4,8 @@
     "password": "int01",
     "database": "repos_db",
     "host": "mysql_container",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": "3306"
   },
   "test": {
     "username": "root",
