--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     platform: linux/x86_64
     container_name: mysql_container
     ports:
-      - 3006:3006
+      - 3306:3306
     environment:
       MYSQL_DATABASE: repos_db
       MYSQL_ROOT_PASSWORD: int20051220
@@ -14,7 +14,7 @@ services:
       MYSQL_PASSWORD: int01
     volumes:
       - ./conf/db/my.cnf:/etc/mysql/conf.d/mysql.cnf
-      - ./db/init_db:/docker-entrypoint-initdb.d
+      # - ./db/init_db:/docker-entrypoint-initdb.d
       - ./docker/mysql/mysql_data:/var/lib/mysql
       # - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
     # healthcheck:  ## 後述のservice_healthyのための設定を記述
@@ -26,14 +26,15 @@ services:
     image: 'node:16.13.0-alpine'
     container_name: api_container
     ports:
-      - 3000:3000
+      - 3030:3030
     volumes:
       - ./:/api
     working_dir: /api  ## 作業ディレクトリを指定する
     command: |  ## 指定した作業ディレクトリでコマンドを実行する
       sh -c 'npm install &&
       node index.js'
-    tty: true  ## コマンド入力を行うのでttyをtrueにする(コマンド受付中の状態にする)
+    # tty: true  ## コマンド入力を行うのでttyをtrueにする(コマンド受付中の状態にする)
+    command: tail -f /dev/null
     depends_on: ## 起動順番を制御する(DBの起動後に起動させる)※ 「依存させる」 と呼ぶ
       - db
       # db:
