--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "gray-matter": "^4.0.3",
+    "mysql2": "^3.7.0",
     "next": "^14.0.3",
     "next-connect": "^1.0.0",
     "next-session": "^4.0.5",
