--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
     "@types/material-ui": "^0.21.16",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
@@ -21,6 +19,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "gray-matter": "^4.0.3",
+    "mysql": "^2.18.1",
     "mysql2": "^3.7.0",
     "next": "^14.0.3",
     "next-connect": "^1.0.0",
@@ -29,6 +28,8 @@
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
+    "react-router-dom": "^6.22.0",
     "react-string-replace": "^1.1.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
