--- a/api/docker-compose.dev.yml
+++ b/api/docker-compose.dev.yml
@@ -15,13 +15,7 @@ services:
       MYSQL_PASSWORD: int01
     volumes:
       - ./conf/db/my.cnf:/etc/mysql/conf.d/mysql.cnf
-      # - ./db/init_db:/docker-entrypoint-initdb.d
       - ./docker/mysql/mysql_data:/var/lib/mysql
-      # - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
-    # healthcheck:  ## 後述のservice_healthyのための設定を記述
-    #   test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]  ## 実行するコマンド
-    #   timeout: 20s ## 実行するコマンドのタイムアウト時間
-    #   retries: 10 ## リトライ回数
 
   api:
     image: 'node:16.13.0-alpine'
@@ -31,7 +25,7 @@ services:
     volumes:
       - ./:/api
     working_dir: /api
-    environment:  # ここから環境変数を設定
+    environment:
       NEXT_PUBLIC_MYSQL_HOST: mysql_container
       NEXT_PUBLIC_MYSQL_DATABASE: repos_db
       NEXT_PUBLIC_MYSQL_USERNAME: sakihookamoto
@@ -40,5 +34,3 @@ services:
     command: [sh, -c, npm install && npm run dev && tail -f /dev/null]
     depends_on: ## 起動順番を制御する(DBの起動後に起動させる)※ 「依存させる」 と呼ぶ
       - db
-      # db:
-      #   condition: service_healthy  ## 依存先のコンテナが起動 かつ、 healthcheck が通ったら起動する
